fixed many layout problems, made the index resizeable, made the tutorial resizeable, made images auto-shrink when they are to small, other bugfuxes? I can't even remember everything i fixed here... but that should be it
git-svn-id: http://code.google.com/archive/p/litestepportable/source/trunk@185 38ca8cbe-b76d-4e91-b741-e71bb1f618b7

--- a/App/Litestep/Tutorial/css/MainPage.css
+++ b/App/Litestep/Tutorial/css/MainPage.css
@@ -7,10 +7,15 @@ body {
 	overflow-y: scroll;
 	position: absolute;
 	bottom: 0px;
-	left: 10px;
-	height: 365px;
-	width: 581px;
+	right: 0px;
+	height: 367px;
+	width: 585px;
+	/*margin-left: 105px;
+	margin-top: 20px;*/
+	/*border-top-width: 20px;
+	border-left-width: 105px;*/
 }
+
 .ControlDiv {
 	position: absolute;
 	top: 0px;
@@ -34,17 +39,19 @@ body {
 	width: 100px;
 	/*height: -20px;*/
 	margin-bottom: 20px;
-	display: none;
+	display: block;
+	overflow: hidden;
 }
 .ToggleTutorialSelector {
 	position: absolute;
-	left: 0px;
+	left: 100px;
 	top: 20px;
-	height: 100%;
+	/*height: 100%;*/
 	width: 5px;
 	/*bottom: 0px;*/
 	z-index: 1;
 	overflow: hidden;
+	cursor: w-resize;
 }
 /*.ToggleTutorialSelector:hover {
 	display: inline;
@@ -71,4 +78,12 @@ body {
 	position: absolute;
 	bottom: 0px;
 	right: 20px;
+}
+ul {
+	margin-left: 20px;
+	padding-left: 0px;
+}
+li {
+	margin-left: 0px;
+	padding-left: 0px;
 }
